# DAP

./: .gitignore
SentimentSystem/: .gitignore  _data_report.txt  call_llm_mistral.py  pyproject.toml  readme.md  requirements.txt
SentimentSystem/configs/: pipeline_config.yaml
SentimentSystem/data/: README.md  sample_input.json
SentimentSystem/data/rvisa/: README.md  laptops.txt  restaurants.txt
SentimentSystem/modules/: __init__.py  models.py
SentimentSystem/modules/masive/: __init__.py  engine.py
SentimentSystem/modules/preprocessing/: __init__.py  engine.py
SentimentSystem/modules/rvisa/: __init__.py  engine.py
SentimentSystem/modules/transmistral/: __init__.py  engine.py
SentimentSystem/scripts/: build_eval_dataset.py  convert_datasets.py  run_batch.py  run_pipeline.py
docs/: flow.txt  proposed_method.md  proposed_method_paper.md
